[package]
name = "modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.1", features = ["full"] }
tokio-modbus = "0.5.3"
